# dimwit

./: CMakeLists.txt  LICENSE.md  README.md  org.dimwit.app.desktop  resources.qrc
include/: ddc_commander.cpp  ddc_commander.h  ddccommander.cpp  ddccommander.h  monitor_manager.cpp  monitor_manager.h  monitormanager.cpp  monitormanager.h
src/: brightness_scheduler.cpp  brightness_scheduler.h  main.cpp  main.h  monitor_controller.cpp  monitor_controller.h  monitormanager.cpp  monitormanager.h  schedule_dialog.cpp  schedule_dialog.h  scheduledialog.cpp  scheduledialog.h
